# PRESENT

./: .gitmodules  CMakeLists.txt  README.md  build.sh
src/present_bs/: crypto.c  crypto.h  crypto_op.c  main.c
src/present_ref/: crypto.c  crypto.h  main.c  test_against_testvectors.py
